fix(signin): align inputs
[Finishes #166118941]

--- a/assets/css/signin.css
+++ b/assets/css/signin.css
@@ -78,6 +78,10 @@ a {
   text-decoration-skip-ink: auto;
 }
 
+.signin-wrapper {
+  width: 100%;
+}
+
 label {
   float: left;
   color: var(--darkGrey);
@@ -90,7 +94,7 @@ label {
   width: 100%;
   border: 0;
   margin: 0 0 0.9rem;
-  padding: 0.9rem;
+  padding: 0.9rem 0;
   font-size: 0.8rem;
   line-height: 1.4;
 }
@@ -137,7 +141,7 @@ label {
 
 .signin-button:hover,
 .signin-button:active {
-  background-color: var(--lighterGreen);
+  background-color: rgb(247, 9, 247);
 }
 
 @media (max-width: 25rem) {
